--- a/Palmer/Palmer.csproj
+++ b/Palmer/Palmer.csproj
@@ -34,14 +34,28 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <None Include="Palmer.nuspec" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Retry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetryCondition.cs" />
+    <Compile Include="RetryConditionHandle.cs" />
     <Compile Include="RetryContext.cs" />
+    <Compile Include="RetryException.cs" />
     <Compile Include="RetryResult.cs" />
     <Compile Include="RetryResultOfT.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
