--- a/Palmer/Palmer.nuspec
+++ b/Palmer/Palmer.nuspec
@@ -3,13 +3,13 @@
   <metadata>
     <id>Palmer</id>
     <version>$version$</version>
-    <authors>Mitch Denny</authors>
-    <owners>Mitch Denny</owners>
+    <authors>$author$</authors>
+    <owners>$author$</owners>
     <licenseUrl>http://mitchdenny.github.com/Palmer/License</licenseUrl>
     <projectUrl>http://mitchdenny.github.com/Palmer</projectUrl>
     <iconUrl>https://github.com/MitchDenny/Palmer/tree/master/Palmer/Palmer.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A small .net library.</description>
+    <description>$description$</description>
     <releaseNotes>This is the initial release of the Palmer library.</releaseNotes>
     <copyright>Copyright 2012</copyright>
     <tags>.net c# csharp deadlock retry fluent</tags>
