--- a/.azure-pipelines/templates/jobs/build.yml
+++ b/.azure-pipelines/templates/jobs/build.yml
@@ -14,9 +14,9 @@ jobs:
     displayName: 'Generate version number'
   - script: |
       set -e
-      dotnet build -c Release /p:Version=$(GIT2SEMVER_MAJORMINORPATCH) 
-      dotnet test --no-build
-      dotnet pack --no-build /p:Version=$(GIT2SEMVER_MAJORMINORPATCH) --output $(Build.ArtifactStagingDirectory)
+      dotnet build src/Palmer.sln -c Release /p:Version=$(GIT2SEMVER_MAJORMINORPATCH) 
+      dotnet test src/Palmer.sln --no-build
+      dotnet pack src/Palmer.sln --no-build /p:Version=$(GIT2SEMVER_MAJORMINORPATCH) --output $(Build.ArtifactStagingDirectory)
     displayName: Build, Test & Pack
   - upload: $(Build.ArtifactStagingDirectory)
     artifact: packages
