--- a/.azure-pipelines/templates/jobs/build.yml
+++ b/.azure-pipelines/templates/jobs/build.yml
@@ -12,14 +12,14 @@ jobs:
   - script: |
       npx -q git2semver@$(Git2SemverVersion) --formatter majorminorpatch-pipelines-variables-and-label
     displayName: 'Generate version number'
-  - ${{ if eq(variables['System.BuildReason'], 'PullRequest')}}:
+  - ${{ if eq(variables['Build.Reason'], 'PullRequest')}}:
     - script: |
         set -e
         dotnet build src/Palmer.sln -c Release /p:VersionPrefix=$(GIT2SEMVER_MAJORMINORPATCH)
         dotnet test src/Palmer.sln -c Release /p:VersionPrefix=$(GIT2SEMVER_MAJORMINORPATCH) 
         dotnet pack src/Palmer.sln -c Release /p:VersionPrefix=$(GIT2SEMVER_MAJORMINORPATCH) /p:VersionSuffix=pr.$(Build.BuildID) --output $(Build.ArtifactStagingDirectory)
       displayName: Build, Test & Pack
-  - ${{ if ne(variables['System.BuildReason'], 'PullRequest')}}:
+  - ${{ if ne(variables['Build.Reason'], 'PullRequest')}}:
     - script: |
         set -e
         dotnet build src/Palmer.sln -c Release /p:VersionPrefix=$(GIT2SEMVER_MAJORMINORPATCH)
